# N1KO-MUSIC

./: .gitignore  LICENSE  README.md  README_CN.md  package.json
.github/workflows/: release.yml
.workbuddy/memory/: 2026-03-23.md  2026-03-24.md
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.ts
backend/src/db/: database.ts  init.ts  schema.sql
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  playlists.ts  stats.ts
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/api/: index.ts  types.ts
frontend/src/api/adapters/: emby.ts  jellyfin.ts  subsonic.ts
frontend/src/components/ui/: badge.tsx  (+9 more)
frontend/src/hooks/: useAudioEngine.ts  useCoverUrl.ts  useLyrics.ts  useMediaSession.ts  useServerQueries.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AlbumDetail.tsx  Albums.tsx  ArtistDetail.tsx  Artists.tsx  Favorites.tsx  History.tsx  Home.tsx  Library.tsx  Login.tsx  PlaylistDetail.tsx  Playlists.tsx  Recommendations.tsx  Search.tsx  Settings.tsx  SongDetail.tsx  Stats.tsx
frontend/src/routes/: lazyRoutes.tsx
frontend/src/store/: coverCacheStore.ts  lyricCacheStore.ts  memberStore.ts  metadataCacheStore.ts  playerStore.ts  serverStore.ts  settingsStore.ts  themeStore.ts
frontend/src/utils/: colorExtract.ts  formatters.ts
(+13 files in other folders)
