[package]
name = "app"
version = "1.2.3"
description = "N1KO MUSIC - Modern Music Streaming Desktop App"
authors = ["N1KO"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
